--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_GOOGLE_CLIENT_ID=602614883538-tun9tct39ssu0ddbupq9g3hqi7rbmh3s.apps.googleusercontent.com
+REACT_APP_GOOGLE_CLIENT_ID=your_google_client_id
